:fire: 删除 DefineClassHelper